--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,92 @@
+# OS specific
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+.conda/
+conda-meta/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb_checkpoints/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.settings/
+
+# Environment variables and secrets
+.env
+.env.local
+*.key
+*.pem
+secrets.json
+api_keys.txt
+
+# Data files (large datasets)
+*.csv.gz
+*.parquet
+*.h5
+*.hdf5
+*.pkl
+*.pickle
+
+# Model files and checkpoints
+*.pt
+*.pth
+*.ckpt
+*.model
+*.weights
+
+# Logs and temporary files
+*.log
+logs/
+temp/
+tmp/
+.cache/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
