--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,10 @@
 name: llm_judge
 channels:
   - conda-forge
+platforms:
+  - linux-64
+  - osx-arm64
+  - win-64
 dependencies:
   - openai
   - pypdf2
@@ -9,4 +13,4 @@ dependencies:
   - google-genai
   - requests
   - conda-lock
-prefix: /Users/skysheng/miniforge3/envs/llm_judge
+  - anthropic
